--- a/resources/scss/components/_sidebar.scss
+++ b/resources/scss/components/_sidebar.scss
@@ -49,7 +49,7 @@
             color: #888;
             text-transform: uppercase;
         }
-        
+
         .sidebar-link {
             display: block;
             padding: .7rem 1.5rem;
@@ -103,9 +103,10 @@
             list-style: none;
             max-height: 0;
             transition: max-height 0.5s ease-out;
-            overflow: hidden;
+            overflow: scroll;
+            overflow-x: hidden;
             &.active {
-                max-height: 500px;
+                max-height: 300px;
                 // transition: max-height 0.2s ease-in;
             }
             li {
@@ -127,7 +128,7 @@
 }
 @media screen and (max-width: 767px) {
     .sidebar-wrapper {
-        left: -270px;   
+        left: -270px;
         .sidebar-toggler.x  {
             display:block;
         }
